--- a/css/style.css
+++ b/css/style.css
@@ -6571,7 +6571,7 @@ img{
 
 @media screen and (min-width:375px){	
 	.logo-img{
-		height: 1.5rem;
+		height: 5.5rem;
 	}
 	.nav-logo-img{
 		height: 5rem;
@@ -6579,7 +6579,7 @@ img{
 
 }
 
-@media screen and (min-width:414px){	
+/* @media screen and (min-width:414px){	
 	.logo-img{
 		height: 9rem;
 	}
@@ -6588,6 +6588,12 @@ img{
 	}
 
 }
+
+@media screen and (min-width:598px){	
+	.logo-img{
+		height: 1.2rem;
+	}
+} */
 @media screen and (min-width:430px){	
 	
 	.nav-logo-img{
