--- a/css/responsive.css
+++ b/css/responsive.css
@@ -154,8 +154,10 @@
 }
 
 @media only screen and (max-width: 1023px){
-	
 
+	.unequal-img{
+		object-fit: fill;
+	}
 	.main-header .main-box .logo-box{
 		position:relative;
 		left:0px;
