changing images on our team page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -156,7 +156,7 @@
 @media only screen and (max-width: 1023px){
 
 	.unequal-img{
-		object-fit: fill;
+		object-fit: inherit;
 	}
 	.main-header .main-box .logo-box{
 		position:relative;
